fix: Add support for label expressions. (#582)
While this can be seen as a new feature, in reality it fixes #581.
I completely misunderstood the new parser methods.